<resources>

    <string name="app_name">CameraGeoLocation</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">CameraGeoLocation</string>
    <string name="takepic">Take Picture</string>
    <string name="savepic">Save Picture</string>
    <string name="getloc">Get Location</string>
    <string name="checkbatt">Battery</string>
    <string name="header">Battery, Location and Picture App</string>
    <string name="save">Save</string>

</resources>