<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/batteryinfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:text="" />

    <ImageView
        android:id="@+id/camera_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/piclayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:weightSum="1" >

        <Button
            android:id="@+id/takepic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:text="@string/takepic"
            android:textSize="14sp" />

        <Button
            android:id="@+id/savepic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:text="@string/savepic"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loclayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/piclayout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:weightSum="1" >

        <Button
            android:id="@+id/getloc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:text="@string/getloc"
            android:textSize="14sp" />

        <Button
            android:id="@+id/checkbattery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:text="@string/checkbatt"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>